@@ -7,8 +7,8 @@ export     CTL_ROOT="F:/code/lib/Windows_32"
 export TINYXML2_ROOT="F:/code/lib/Windows_32"
 
 
-#export FFMPEG_ROOT=F:/code/lib/ffmpeg-20141004-git-1c4c78e-win32-shared
-export FFMPEG_ROOT=F:/code/lib/ffmpeg-20150913-git-d13a2df-win32-shared
+#export FFMPEG_ROOT=F:/code/lib/ffmpeg-20150913-git-d13a2df-win32-shared
+export FFMPEG_ROOT=F:/code/lib/ffmpeg-20151015-git-0418541-win32-shared/
 
 
 export  GLUT_ROOT_PATH="F:/code/lib/glut/"
