@@ -15,7 +15,8 @@ v2.9.7   - Allowed command-line loading of stereo images/movies
 	 - Improved video playback when scrubbing which was skipping
 	   some frames incorrectly.  This change should remove all
 	   warnings of missing video frames.
-	 - Improved audio sync after seeks and in normal mode.
+	 - Improved audio sync after seeks and in normal mode for
+	   Linux and Windows64.
 	 - Bug fixed adjusting of EDL when stereo was on.
 	 - Made music only tracks not report an invalid index for
 	   channel selection.
